--- a/chanpin_info.html
+++ b/chanpin_info.html
@@ -3,15 +3,20 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" itemprop="description" content="二维码注册认证平台是在中国二维码注册认证中心的指导下，由中国电子商会和中国质量认证中心联合发起成立中国第三方二维码注册认证平台。面向国际国内企业、机构及商户提供二维码注册、认证、制作和统一编码、发放、验证等二维码应用服务。可实现各行业企业的信息展示二维码、产品二维码、溯源二维码、防伪二维码、网站二维码、支付二维码等展示营销服务，并提供各行业企业示范试点认证通道，打通企业品牌与产品品质的双飞跃。" />
-    <meta name="keywords" itemprop="keywords" content="二维码,二维码注册认证平台,二维码认证,二维码解决方案,二维码应用平台,二维码实名认证,二维码企业,二维码申请注册中心,商品二维码,二维条码,二维码注册认证中心,企业二维码,公司二维码,产品二维码,防伪二维码申请,二维码申请,二维码办理,防伪二维码,溯源二维码,二维码制作,2维码,二维码生成器,二维码注册,生成二维码,二维码识别,二维码防伪,二维码生成,扫描二维码,二维码扫描器,二维码追溯,手机二维码,二维码扫描,二维码名片,二维码平台,二维码软件,二维码应用,二维码查询,二维码营销平台,二维码注册认证,二维码注册平台,视频二维码,二维码注册中心,二维码价格,二维码机构" />
-    <title>二维码注册认证平台</title>
+    <title></title>
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="stylesheet" type="text/css" href="css/banner.css">
     <link rel="stylesheet" type="text/css" href="css/storeinfo.css">
 </head>
 <body>
 <div class="box">
+    <!-- 头部 -->
+    <div class="title_search suger_search txt_c bgf99d53 border-b-f99d53 clearFix">
+        <a href="javascript:;" class="go_back fl" onclick="javascript :history.back(-1);">
+            <img src="img/fanhui1.png" alt="">
+        </a>
+        <p>产品详情页</p>
+    </div>
     <!-- banner -->
     <div class="box_banner">
         <div class="banner">
